--- Auto-Git Commit ---

--- a/a1.html
+++ b/a1.html
@@ -107,16 +107,44 @@
   <br>
  <div class="content">
 <div class="imgbg">
- <img src="./img/person_2.jpg" alt="">
+ <img src="./img/person_2.jpg" width="300px" height="300px" alt="">
  <div class="name">name</div>
 </div>
 <div>
-  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut recusandae sed ducimus neque sapiente repellat! Architecto ipsa placeat animi natus debitis, earum incidunt repudiandae eum expedita, suscipit commodi sed doloremque? <br>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem consequuntur impedit, tenetur exercitationem sequi repellat, itaque ratione quod aliquam perferendis, mollitia recusandae assumenda cum ex accusamus odit architecto provident obcaecati.</p>
+  <p class="cont"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut recusandae sed ducimus neque sapiente repellat! Architecto ipsa placeat animi natus debitis, earum incidunt repudiandae eum expedita, suscipit commodi sed doloremque? <br>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem consequuntur impedit, tenetur exercitationem sequi repellat, itaque ratione quod aliquam perferendis, mollitia recusandae assumenda cum ex accusamus odit architecto provident obcaecati. <br>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque deserunt repudiandae suscipit tempore quia eveniet quas neque, porro culpa accusantium fugit totam veritatis aliquam possimus ratione! Inventore perspiciatis maiores nostrum.</p>
 </div>
-
+ </div>
+ <div>
+  <h1 class="head">Freatures </h1>
+  <p class="cont">
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+</p>
  </div>
 </section>
-
+<section>
+  <h1 class="head">What Parents say..</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
+</section>
 <br>
 <br>
 
