--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -141,8 +141,8 @@
             <li class="list-inline-item"><button type="button" class="btn btn-primary">Primary</button></li>
           </ul> -->
           <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
-            <li> <button type="button" class="btn btn-primary">Know More</button> </li>
-            <li> <button type="button" class="btn btn-success">Adimmision</button></li>
+            <li> <button type="button" class="btn btn-primary"><a style="color: white;" href="a1.html">  Know More  </a> </button> </li>
+            <li> <button type="button" class="btn btn-success"><a style="color: white;" href="addform.html">  Admissions  </a> </button></li>
           </ul>
         </div>
       
@@ -183,8 +183,8 @@
       <li class="list-inline-item"><button type="button" class="btn btn-primary">Primary</button></li>
     </ul> -->
     <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
-      <li> <button type="button" class="btn btn-primary">Know More</button> </li>
-      <li> <button type="button" class="btn btn-success">Adimmision</button></li>
+      <li> <button type="button" class="btn btn-primary"><a style="color: white;" href="a1.html">  Know More  </a> </button> </li>
+      <li> <button type="button" class="btn btn-success"><a style="color: white;" href="addform.html">  Admission  </a> </button></li>
     </ul>
   </div>
 
@@ -230,7 +230,7 @@
           </ul> -->
           <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
             <li> <button type="button" class="btn btn-primary"> <a style="color: white;" href="a1.html">  Know More  </a> </button> </li>
-            <li> <button type="button" class="btn btn-success">Adimmision</button></li>
+            <li> <button type="button" class="btn btn-success"><a style="color: white;" href="addform.html"> Admissions </a> </button></li>
           </ul>
         </div>
       
@@ -271,8 +271,8 @@
       <li class="list-inline-item"><button type="button" class="btn btn-primary">Primary</button></li>
     </ul> -->
     <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
-      <li> <button type="button" class="btn btn-primary">Know More</button> </li>
-      <li> <button type="button" class="btn btn-success">Adimmision</button></li>
+      <li> <button type="button" class="btn btn-primary"><a style="color: white;" href="a1.html">  Know More  </a> </button> </li>
+      <li> <button type="button" class="btn btn-success"><a style="color: white;" href="addform.html"> Admissions  </a> </button></li>
     </ul>
   </div>
 
