--- a/a1.html
+++ b/a1.html
@@ -127,29 +127,84 @@
   1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
   1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
 </p>
+<div class="container">
+  <div style="justify-content: space-evenly; display: flex;" class="row">
+ 
+   
+    <button type="button" class="btn btn-warning"> <a style="color: white;" href=""> Acadmics Calendar  </a></button>
+  
+
+   <button type="button" class="btn btn-success"><a style="color: white;" href=""> Online Admissions   </a></button>
+ 
+  </div>
+</div>
  </div>
 </section>
+<br>
+
 <section>
   <h1 class="head">What Parents say..</h1>
+  <br>
+
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        One of three columns
+      <div class="review1">
+<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+  <br> <span style="color: white; float: right;"> name</span>
+</p>
+      </div>
       </div>
       <div class="col-sm">
-        One of three columns
+        <div class="review1">
+  <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+    <br> <span style="color: white; float: right;"> name</span>
+  </p>
+        </div>
+        </div>
+        <div class="col-sm">
+          <div class="review1">
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+      <br> <span style="color: white; float: right;"> name</span>
+    </p>
+          </div>
+          </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-sm">
+      <div class="review1">
+<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+  <br> <span style="color: white; float: right;"> name</span>
+</p>
+      </div>
       </div>
       <div class="col-sm">
-        One of three columns
-      </div>
+        <div class="review1">
+  <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+    <br> <span style="color: white; float: right;"> name</span>
+  </p>
+        </div>
+        </div>
+        <div class="col-sm">
+          <div class="review1">
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
+      <br> <span style="color: white; float: right;"> name</span>
+    </p>
+          </div>
+          </div>
     </div>
   </div>
 </section>
 <br>
 <br>
+<div>
+ 
 
+</div>
 
 <section>
+  
   <!-- Footer -->
 <footer class="page-footer  font-small blue-grey lighten-5">
 
