--- a/Faculty.html
+++ b/Faculty.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/saurabhfaculty.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/faculty.css">
 
 
 </head>
@@ -112,158 +112,58 @@
 <br>
 <div >
     <div class="naming" > 
-        <p> Primary School</p>
-        <hr>
-         <p> Primary School  </p>
+    <p>  Primary School </p>
+  
     </div>
+    <br>
+    <div class="lines">
+    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+</div>
+</div>
+<br>
+<div >
+    <div class="naming" > 
+    <p> Junior College </p>
+  
+    </div>
+    <br>
+    <div class="lines">
+    <p class="inner"> <a style="color: black " href=""> # English</a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Physics</a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Chemistry</a>  </p>
+</div>
+<div class="lines">
+ 
+
+    <p class="inner"> <a style="color: black " href=""> # Biology</a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Marathi</a>  </p>
+    <p class="inner"> <a style="color: black " href=""> # Matematics</a>  </p>
+</div>
+</div>
+<br>
+<div >
+    <div class="naming" > 
+    <p>  Vocatinal</p>
+  
+    </div>
+    <br>
+    <div class="lines">
+    <p class="inner"> <a style="color: black " href=""> #Arts </a>  </p>
+
+    <p class="inner"> <a style="color: black " href=""> # Vocational</a>  </p>
+
+
 </div>
 
+</div>
 
-<section>
-  <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
-
-  <div style="background-color: maroon;">
-    <div class="container">
-
-      <!-- Grid row-->
-      <div class="row py-4 d-flex align-items-center">
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 style=" color:white; font-family:'Roboto Condensed', sans-serif; font-size:20px"  class="mb-0">Get connected with us on social networks!</h6>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row-->
-
-    </div>
-  </div>
-
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
-
-    <!-- Grid row -->
-    <div class="row mt-3 dark-grey-text">
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-
-        <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">Company name</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Products</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="#!">MDBootstrap</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">MDWordPress</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">BrandFlow</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="#!">Your Account</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Become an Affiliate</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Shipping Rates</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Help</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
-  </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
-    <a class="dark-grey-text" href="web.html">web_deves</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-</section>
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
