--- a/Faculty.html
+++ b/Faculty.html
@@ -164,6 +164,73 @@
 
 </div>
 
+<section>
+<div class="horiline"> 
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+<div class="plate">
+  <div >
+<img class="plate-img" src="./img/person_200.png" alt="">
+  </div>
+<div class="plate-cont" >
+<h4 style=" font-weight: bold;">Name of proff.</h4>
+<h5  > post </h5>
+<p> social </p>
+</div>
+</div>
+
+</div>
+
+
+</section>
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
