--- a/Faculty.html
+++ b/Faculty.html
@@ -216,19 +216,119 @@
 <p> social </p>
 </div>
 </div>
-<div class="plate">
-  <div >
-<img class="plate-img" src="./img/person_200.png" alt="">
+
+
+</div>
+<br>
+<div class="horiline"> 
+  <div class="plate">
+    <div >
+  <img class="plate-img" src="./img/person_200.png" alt="">
+    </div>
+  <div class="plate-cont" >
+  <h4 style=" font-weight: bold;">Name of proff.</h4>
+  <h5  > post </h5>
+  <p> social </p>
   </div>
-<div class="plate-cont" >
-<h4 style=" font-weight: bold;">Name of proff.</h4>
-<h5  > post </h5>
-<p> social </p>
-</div>
-</div>
+  </div>
+  <div class="plate">
+    <div >
+  <img class="plate-img" src="./img/person_200.png" alt="">
+    </div>
+  <div class="plate-cont" >
+  <h4 style=" font-weight: bold;">Name of proff.</h4>
+  <h5  > post </h5>
+  <p> social </p>
+  </div>
+  </div>
+  <div class="plate">
+    <div >
+  <img class="plate-img" src="./img/person_200.png" alt="">
+    </div>
+  <div class="plate-cont" >
+  <h4 style=" font-weight: bold;">Name of proff.</h4>
+  <h5  > post </h5>
+  <p> social </p>
+  </div>
+  </div>
+  <div class="plate">
+    <div >
+  <img class="plate-img" src="./img/person_200.png" alt="">
+    </div>
+  <div class="plate-cont" >
+  <h4 style=" font-weight: bold;">Name of proff.</h4>
+  <h5  > post </h5>
+  <p> social </p>
+  </div>
+  </div>
+  <div class="plate">
+    <div >
+  <img class="plate-img" src="./img/person_200.png" alt="">
+    </div>
+  <div class="plate-cont" >
+  <h4 style=" font-weight: bold;">Name of proff.</h4>
+  <h5  > post </h5>
+  <p> social </p>
+  </div>
+  </div>
+  
+  
+  </div>
 
-</div>
-
+  <div class="horiline"> 
+    <div class="plate">
+      <div >
+    <img class="plate-img" src="./img/person_200.png" alt="">
+      </div>
+    <div class="plate-cont" >
+    <h4 style=" font-weight: bold;">Name of proff.</h4>
+    <h5  > post </h5>
+    <p> social </p>
+    </div>
+    </div>
+    <div class="plate">
+      <div >
+    <img class="plate-img" src="./img/person_200.png" alt="">
+      </div>
+    <div class="plate-cont" >
+    <h4 style=" font-weight: bold;">Name of proff.</h4>
+    <h5  > post </h5>
+    <p> social </p>
+    </div>
+    </div>
+    <div class="plate">
+      <div >
+    <img class="plate-img" src="./img/person_200.png" alt="">
+      </div>
+    <div class="plate-cont" >
+    <h4 style=" font-weight: bold;">Name of proff.</h4>
+    <h5  > post </h5>
+    <p> social </p>
+    </div>
+    </div>
+    <div class="plate">
+      <div >
+    <img class="plate-img" src="./img/person_200.png" alt="">
+      </div>
+    <div class="plate-cont" >
+    <h4 style=" font-weight: bold;">Name of proff.</h4>
+    <h5  > post </h5>
+    <p> social </p>
+    </div>
+    </div>
+    <div class="plate">
+      <div >
+    <img class="plate-img" src="./img/person_200.png" alt="">
+      </div>
+    <div class="plate-cont" >
+    <h4 style=" font-weight: bold;">Name of proff.</h4>
+    <h5  > post </h5>
+    <p> social </p>
+    </div>
+    </div>
+    
+    
+    </div>
 
 </section>
   <!-- jQuery -->
