--- a/Faculty.html
+++ b/Faculty.html
@@ -281,9 +281,17 @@
     <img class="plate-img" src="./img/person_200.png" alt="">
       </div>
     <div class="plate-cont" >
-    <h4 style=" font-weight: bold;">Name of proff.</h4>
-    <h5  > post </h5>
-    <p> social </p>
+    <h4 style=" font-weight: bold;">Mr S R Srivastava</h4>
+    <h5> Asst. Teacher <br> (Chemistry) </h5>
+    <p> BE PHD  </p>
+    <div class="list">
+      <ul>
+<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
+
+
+      </ul>
+    </div>
     </div>
     </div>
     <div class="plate">
@@ -294,6 +302,7 @@
     <h4 style=" font-weight: bold;">Name of proff.</h4>
     <h5  > post </h5>
     <p> social </p>
+    
     </div>
     </div>
     <div class="plate">
