--- a/Faculty.html
+++ b/Faculty.html
@@ -112,59 +112,21 @@
 <br>
 <div >
     <div class="naming" > 
-    <p>  Primary School </p>
+    <p>   School Faculty </p>
   
     </div>
     <br>
     <div class="lines">
-    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#primary ">  Primary School</a>  </p>
 
-    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#middle">Middle School</a>  </p>
 
-    <p class="inner"> <a style="color: black " href=""> # Primary School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#High">  High School</a>  </p>
 </div>
 </div>
-<br>
-<div >
-    <div class="naming" > 
-    <p> Junior College </p>
-  
-    </div>
-    <br>
-    <div class="lines">
-    <p class="inner"> <a style="color: black " href=""> # English</a>  </p>
 
-    <p class="inner"> <a style="color: black " href=""> # Physics</a>  </p>
-
-    <p class="inner"> <a style="color: black " href=""> # Chemistry</a>  </p>
-</div>
-<div class="lines">
- 
-
-    <p class="inner"> <a style="color: black " href=""> # Biology</a>  </p>
-
-    <p class="inner"> <a style="color: black " href=""> # Marathi</a>  </p>
-    <p class="inner"> <a style="color: black " href=""> # Matematics</a>  </p>
-</div>
-</div>
-<br>
-<div >
-    <div class="naming" > 
-    <p>  Vocatinal</p>
-  
-    </div>
-    <br>
-    <div class="lines">
-    <p class="inner"> <a style="color: black " href=""> #Arts </a>  </p>
-
-    <p class="inner"> <a style="color: black " href=""> # Vocational</a>  </p>
-
-
-</div>
-
-</div>
 <h1 class="head"> Primary School</h1>
-<section style="background-color: rgb(255, 255, 255);" id="primary">
+<section style="background-color: rgba(255, 255, 255, 0.144);" id="primary">
  
 <div class="horiline"> 
 <div class="plate">
@@ -177,8 +139,8 @@
 <p> social </p>
 <div class="list">
   <ul>
-<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
-<li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
+<li> <a style="color: black; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: black;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
 
 
   </ul>
@@ -195,8 +157,8 @@
 <p> social </p>
 <div class="list">
   <ul>
-<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
-<li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
+<li> <a style="color: black; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: black;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
 
 
   </ul>
@@ -213,8 +175,8 @@
 <p> social </p>
 <div class="list">
   <ul>
-<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
-<li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
+<li> <a style="color: black; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: black;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
 
 
   </ul>
@@ -231,8 +193,8 @@
 <p> social </p>
 <div class="list">
   <ul>
-<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
-<li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
+<li> <a style="color: black; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: black;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
 
 
   </ul>
@@ -255,7 +217,7 @@
   <p> social </p>
   <div class="list">
     <ul>
-<li> <a style="color: navy; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
+<li> <a style="color: black; font-size: 20px; " href=""> <i class="fas fa-phone-square-alt"></i> </a> </li>
 <li> <a style="color: navy;font-size: 20px; " href=""> <i class="fas fa-envelope-square cc_pointer"></i> </a> </li>
 
 
