--- a/Acadmics.html
+++ b/Acadmics.html
@@ -392,11 +392,12 @@
       <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
 
         <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">Company name</h6>
+        <h6 class="text-uppercase font-weight-bold">VBJC</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+        <p>Vidarbha Buniyadi Primary School, High School and Junior College. <br>
+          Government recognised,
+          Private
+          Aided School.</p>
 
       </div>
       <!-- Grid column -->
@@ -410,16 +411,16 @@
         <h6 class="text-uppercase font-weight-bold">Useful links</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <a class="dark-grey-text" href="#!">Your Account</a>
+          <a class="dark-grey-text" href="index.html">Home</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Become an Affiliate</a>
+          <a class="dark-grey-text" href="Acadmics.html">Academics</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Shipping Rates</a>
+          <a class="dark-grey-text" href="Admission.html">Admissions</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Help</a>
+          <a class="dark-grey-text" href="ContactUS.html">Contact Us</a>
         </p>
 
       </div>
@@ -432,13 +433,13 @@
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <i class="fas fa-home mr-3"></i>Plot no. - 235, Omnagar, 
+          Sakkardara chowk,  Umred Road,  Nagpur- 440024</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+          <i class="fas fa-envelope mr-3"></i> vidarbhabuniyadi@gmail.com</p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <i class="fas fa-phone mr-3"></i> 0712-2745865</p>
+       
 
       </div>
       <!-- Grid column -->
