--- a/AboutUs.html
+++ b/AboutUs.html
@@ -164,7 +164,7 @@
   <!-- Footer -->
 <footer class="page-footer  font-small blue-grey lighten-5">
 
-  <div style="background-color: #21d192;">
+  <div style="background-color: #031640 ;">
     <div class="container">
 
       <!-- Grid row-->
@@ -177,7 +177,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
+        <div style="font-weight: bold;" class="col-md-6 col-lg-7 text-center text-md-right">
 
           <!-- Facebook -->
           <a class="fb-ic">
@@ -210,45 +210,26 @@
   </div>
 
   <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
+  <div  class="container text-center text-md-left mt-5">
 
     <!-- Grid row -->
-    <div class="row mt-3 dark-grey-text">
+    <div  class="row mt-3 dark-grey-text">
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
 
         <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">Company name</h6>
+        <h6 class="text-uppercase font-weight-bold">VBJC</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+        <p>Vidarbha Buniyadi Primary School, High School and Junior College. <br>
+          Government recognised,
+          Private
+          Aided School.</p>
 
       </div>
       <!-- Grid column -->
 
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">Products</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a class="dark-grey-text" href="#!">MDBootstrap</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">MDWordPress</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">BrandFlow</a>
-        </p>
-        <p>
-          <a class="dark-grey-text" href="#!">Bootstrap Angular</a>
-        </p>
-
-      </div>
-      <!-- Grid column -->
+     
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -257,16 +238,16 @@
         <h6 class="text-uppercase font-weight-bold">Useful links</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <a class="dark-grey-text" href="#!">Your Account</a>
+          <a class="dark-grey-text" href="index.html">Home</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Become an Affiliate</a>
+          <a class="dark-grey-text" href="Acadmics.html">Academics</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Shipping Rates</a>
+          <a class="dark-grey-text" href="Admission.html">Admissions</a>
         </p>
         <p>
-          <a class="dark-grey-text" href="#!">Help</a>
+          <a class="dark-grey-text" href="ContactUS.html">Contact Us</a>
         </p>
 
       </div>
@@ -279,13 +260,13 @@
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <i class="fas fa-home mr-3"></i>Plot no. - 235, Omnagar, 
+          Sakkardara chowk,  Umred Road,  Nagpur- 440024</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+          <i class="fas fa-envelope mr-3"></i> vidarbhabuniyadi@gmail.com</p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <i class="fas fa-phone mr-3"></i> 0712-2745865</p>
+       
 
       </div>
       <!-- Grid column -->
