--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -115,8 +115,19 @@
     <div class="row">
       <div class="col-sm">
         <div class="vision">
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati nemo dolor neque ipsam ad saepe. Magni iste quam enim? Sunt laboriosam quae nobis magnam non modi sint voluptate sed. <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati excepturi atque hic similique eveniet sit reprehenderit ea eos optio, quis sapiente minima nisi voluptate iusto? Modi ut molestias vel temporibus!</p>
+        <p class="para">
+          Our Mission is to Nurture the students with  <br>
+          •	The Modern Scientific Approach, Digitalization and E-learning.  <br>
+          •	The Vision for Healthy and Clean Nation.  <br>
+          •	The Education to become Eco-friendly, Socio friendly and Secular.  <br>
+          •	The Historical, Cultural, Intellectual and Spiritual Heritage of India.  <br>
+          •	The Vision to Perceive Society as our Best friend, Philosopher, Guide and Resource.  <br>
+          •	Nationalism with the International Outlook for Global Harmony and Integration.  <br>
+          •	The Strength to become Confident, Competent, Hardworking and Creative.  <br>
+          •	The Passion to become Good Citizens of the Nation and Ready to face New Challenges.   <br>
+          
+
+
         </div>
       </div>
       <div class="col-sm">
