--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
       <div class="col">
         <img style="margin-bottom: 10px;" src="./img/fav.ico " width="120px" height=" 100px"  > 
         <br>
-      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptatem soluta doloremque ab nobis eveniet nisi suscipit commodi earum accusamus omnis numquam, nam voluptates nesciunt neque nemo? Dolorem, voluptate obcaecati. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel commodi exercitationem molestiae consequuntur non tempore sit ea alias odio aliquam, omnis dignissimos maxime at suscipit, et necessitatibus molestias quis. <br> <Span>   <a href="AboutUs.html"> know more...</a> </Span>
+      <p class="para"> This Alma Mater believes in ‘SATYAM SHIVAM SUNDARAM’. Abide by ‘Service to Society’, we aim at the all round development of the students by means of Comprehensive Quality education through right plans and right action. <br>
+        Established in 1958, institute imparts value-based quality education and individual attention for socially deprived students. Once the pupil is admitted in pre-primary, he is nurtured well till postgraduation and becomes self-reliant. The Institution has the great legacy of 62 years of hardship in inculcating good moral values among the pupils. 
+         <br> <Span>   <a href="AboutUs.html"> know more...</a> </Span>
        </p>
       </div>
       <div class="col">
