--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -226,7 +226,7 @@
           </div>
       
       </div>
-      <div style="opacity:0;" class="card">
+      <div style="display: none;" class="card">
 
         <!-- Card image -->
          <img class="card-img-top" src="./img/person_2.jpg" alt="Card image cap"> 
