--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
     <div class="carousel-item  facbreadcrum">
       <img class="d-block w-100" src="img/im3.jpeg"
         alt="Second slide">
-        <p style="padding: 0;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi School <br> and Junior  College</p>
+        <p style="padding: 0;" class="midle"> <br>   Government recognised,
+          Private <br>
+          Aided School</p>
        
     </div>
     <!--/Second slide-->
@@ -126,7 +128,7 @@
     <div class="carousel-item  facbreadcrum">
       <img class="d-block w-100" src="img/WhatsApp Image 2020-07-25 at 4.09.02 PM.jpeg"
         alt="Third slide">
-        <p style="padding: 0;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi School <br> and Junior  College</p>
+        <p style="padding: 0;" class="midle"> <br> Education is key to Sucess</p>
        
     </div>
     <!--/Third slide-->
