--- a/Faculty.html
+++ b/Faculty.html
@@ -61,8 +61,15 @@
           <a class="dropdown-item" href="AboutUs.html"> - Alumni</a>
         </div>
       </li>
-      <li class="nav-item active ">
-        <a class="nav-link" href="Faculty.html">Our Team</a>
+      <li class="nav-item dropdown">
+        <a style="color: white;" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" id="cols"> Our Faculty
+        </a>
+        <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+          <a class="dropdown-item" href="Faculty.html" id="cols"> - School</a>
+          <a class="dropdown-item" href="Acadmics.html" id="cols"> -College</a>
+     
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="Admission.html">Admission</a>
