--- Auto-Git Commit ---

--- a/a1.html
+++ b/a1.html
@@ -111,8 +111,10 @@
  <div class="name">name</div>
 </div>
 <div>
-  <p class="cont"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut recusandae sed ducimus neque sapiente repellat! Architecto ipsa placeat animi natus debitis, earum incidunt repudiandae eum expedita, suscipit commodi sed doloremque? <br>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem consequuntur impedit, tenetur exercitationem sequi repellat, itaque ratione quod aliquam perferendis, mollitia recusandae assumenda cum ex accusamus odit architecto provident obcaecati. <br>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque deserunt repudiandae suscipit tempore quia eveniet quas neque, porro culpa accusantium fugit totam veritatis aliquam possimus ratione! Inventore perspiciatis maiores nostrum.</p>
+  <p class="cont"> In our junior college, we have four streams <br> (1) Arts (Marathi medium) <br> (2) Commerce (Marathi medium)  <br> (3) MCVC( H.S.C Vocational) (Marathi medium) with trades Accounting and Office management , Horticulture and Crop Science  <br> (4) Science (General subjects and  Bifocal subjects like Fisheries and Electronics).
+   <br> M.C.V.C course offers students commercial approach to earning while learning or to start their small scale business.
+    Science course helps to appear for medical, engineering and scientific research entrance examination.
+    </p>
 </div>
  </div>
  <div>
