--- Auto-Git Commit ---

--- a/ContactUS.html
+++ b/ContactUS.html
@@ -107,7 +107,9 @@
   </div>
 </div>
 </section>
-<section style="background-color: gainsboro; margin: 20px;">
+<section style=" background-color: rgba(220, 220, 220, 0.247);
+padding-top: 10px;
+padding-bottom: 20px;">
 
    <!-- Default form contact -->
 <form class="text-center border border-light p-5" action="#!">
