--- a/addform.html
+++ b/addform.html
@@ -3,7 +3,12 @@
 <head>
 	<title>form</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<style type="text/css">
+  <style type="text/css">
+  body{
+    background-color: rgba(220, 220, 220, 0.247);
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
 		.container{
 			margin-top: 1%;
 		}
