--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="col-md">
           <div class="card crdclr">
             <div class="card-body pb-0">
-          <a href="">    <a href=""> <img class="m-10 myi"  src="./img/flaticon/road.png" ></a>  </a>
+            <a href=""> <img style="padding: 30px;" class="m-10 myi"  src="./img/flaticon/road.png"  width="100px" height="200px" ></a>
               <div class="ser-head"> 
              <a href="rsp.html">    <h3 >RSP logo</h3>  </a> 
               </div >
@@ -273,7 +273,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-       <a href="">         <img class="pb-1 myi"  src="./img/flaticon/meditation.png" > </a>
+       <a href="">         <img style="padding: 30px;"  class="pb-1 myi"  src="./img/flaticon/meditation.png"  width="100px" height="200px" > </a>
               <div class="ser-head"> 
                <a href="yoga.html"> <h3 >Yoga</h3></a>
               </div >
@@ -290,7 +290,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-           <a href="">    <img class="pb-3 p-4 myi"  src="./img/flaticon/exhibition.png " > </a>
+           <a href="">    <img style="padding: 30px;" style="padding: 30px;"  class="pb-3 p-4 myi"  src="./img/flaticon/exhibition.png " width="100px" height="200px"  > </a>
               <div class="ser-head"> 
                <a href="exhibition.html">  <h3 >Exhibitions</h3> </a>
               </div >
@@ -315,7 +315,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-            <a href="">   <img class="pb-1 myi"  src="./img/flaticon/advice.png" > </a>
+            <a href="">   <img  style="padding: 30px;"class="pb-1 myi"  src="./img/flaticon/advice.png" width="100px" height="200px"  > </a>
               <div class="ser-head"> 
            <a href="cc.html">       <h3 >Career Counselling</h3> </a>
               </div >
@@ -333,7 +333,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-            <a href="">   <img class="p-3 myi"  src="./img/flaticon/gift.png" ></a>
+            <a href="">    <img style="padding: 40px;" class="p-3 myi"  src="./img/flaticon/gift.png" width="100px" height="200px"  ></a>
               <div class="ser-head"> 
               <a href="yoga.html">  <h3 >Service Before Self</h3>  </a> 
               </div >
@@ -350,7 +350,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-             <a href="">  <img class="pb-1 myi"  src="./img/flaticon/professions-and-jobs.png" ></a>
+             <a href="">  <img  style="padding: 30px;" class="pb-1 myi"  src="./img/flaticon/professions-and-jobs.png" width="100px" height="200px"  ></a>
               <div class="ser-head"> 
            <a href="yoga.html">      <h3 >Fire Evacuation Drill</h3> </a>
               </div >
