--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #031640;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #5cdb95;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -244,7 +244,7 @@
 <br>
 <h2 class="head" id="about">Our Services </h2> 
 <br>
-<section class="service" style="background-color: #a6bff7 ; box-shadow: 2px 1px 10px 8px #A1BCF7; ">
+<section class="service" style="background-color: #05386b ; box-shadow: 2px 1px 10px 8px #A1BCF7; ">
    
     <div class="card-body rounded-bottom">
       <div class="container">
