--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-       <a href="">         <img style="padding: 30px;"  class="pb-1 myi"  src="./img/flaticon/meditation.png"  width="100px" height="200px" > </a>
+       <a href="">         <img style="padding: 30px;"  class="pb-1 myi"  src="./img/flaticon/healthy.png"  width="100px" height="200px" > </a>
               <div class="ser-head"> 
                <a href="yoga.html"> <h3 >Yoga</h3></a>
               </div >
@@ -307,7 +307,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-            <a href="">   <img  style="padding: 30px;"class="pb-1 myi"  src="./img/flaticon/advice.png" width="100px" height="200px"  > </a>
+            <a href="">   <img  style="padding: 30px;"class="pb-1 myi"  src="./img/flaticon/decision.png" width="100px" height="200px"  > </a>
               <div class="ser-head"> 
            <a href="cc.html">       <h3 >Career Counselling</h3> </a>
               </div >
@@ -342,7 +342,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-             <a href="">  <img  style="padding: 30px;" class="pb-1 myi"  src="./img/flaticon/professions-and-jobs.png" width="100px" height="200px"  ></a>
+             <a href="">  <img  style="padding: 30px;" class="pb-1 myi"  src="./img/flaticon/fire.png" width="100px" height="200px"  ></a>
               <div class="ser-head"> 
            <a href="drill.html">      <h3 >Fire Evacuation Drill</h3> </a>
               </div >
