--- Auto-Git Commit ---

--- a/stud.html
+++ b/stud.html
@@ -117,21 +117,21 @@ $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
     <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(145).jpg" data-size="1600x1067">
-            <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
+            <img alt="picture" src="./img/person_4.jpg" class="img-fluid">
           </a>
           </figure>
         </div>
         <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(149).jpg" data-size="1600x1067">
-              <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
+              <img alt="picture" src="./img/person_200.png" class="img-fluid">
             </a>
           </figure>
         </div>
         <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(149).jpg" data-size="1600x1067">
-              <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
+              <img alt="picture" src="./img/person_2.jpg" class="img-fluid">
             </a>
           </figure>
         </div>
