--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -283,10 +283,10 @@
 <br>
 <h1 class="head">Facility </h1>
 <br>
-<section style="background-color: rgb(124, 198, 201); color: white;">
+<section style="background-color: #d6f8b4; color: black;">
   <div   class="faccard">
     <div>
-      <h2> library  </h2>
+      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -295,7 +295,7 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2> library  </h2>
+      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -305,17 +305,17 @@
  
   <div   class="faccard">
     <div>
-      <h2> library  </h2>
+      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im" src="https://cdn.pixabay.com/photo/2014/10/14/20/14/library-488690_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im" src="./img/person_4.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
  
   <div   class="faccard">
     <div>
-      <h2> library  </h2>
+      <h2 style="color: #e93219;font-weight: bolder;"> library  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
