--- a/AboutUs.html
+++ b/AboutUs.html
@@ -23,7 +23,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #031640;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #e9412bf5;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -243,9 +243,9 @@
 </section>
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer class="page-footer  font-small">
 
-  <div style="background-color: #031640 ;">
+  <div style="background-color: #e9412bf5 ;">
     <div class="container">
 
       <!-- Grid row-->
