--- a/Admission.html
+++ b/Admission.html
@@ -23,7 +23,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #031640;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #e9412bf1;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,7 +111,7 @@
 
       <div  class="admsn">
         <div >
-          <h5 style="font-weight: bold;" class="font-weight-bold mb-3">    <i style="color: #990011ff; padding-right: 5px;" class="fas fa-cogs fa-2x"></i> GUIDELINES FOR PARENT’S:</h5>
+          <h5 style="font-weight: bold; color: #e9412bf1 ;" class="font-weight-bold mb-3">    <i style="color: #e9412bf1; padding-right: 5px;" class="fas fa-cogs fa-2x"></i> GUIDELINES FOR PARENT’S:</h5>
           <p class="admsn-para" >In view of Corona Virus outbreak, the school management has enabled online admission registration process for parent. Parent can register their ward's admission (Pre-Nursery to Std. VIII) by paying minimal fees and complete the documentation formalities once school re-open. <br>Below are the steps for online admission registration process - <br>
             1.Fill up online admission registration form. <br>
             2. *Refer list of documents to be submitted at School within 15 days from school’s re-opening.  <br>
@@ -136,7 +136,7 @@
    
         <!-- Grid column -->
         <div >
-          <h5 class="font-weight-bold mb-3">  <i style="color: #990011ff; padding-right: 5px;" class="far fa-file-alt fa-2x"></i>  List of documents to be submitted:</h5>
+          <h5 style="color: #e9412bf1;" class="font-weight-bold mb-3">  <i style="color: #e9412bf1; padding-right: 5px;" class="far fa-file-alt fa-2x"></i>  List of documents to be submitted:</h5>
           <p class="admsn-para"> • Completed Admission Form <br>
             • Medical Certificate <br>
             • Copy of Student’s Aadhar Card <br>
@@ -151,7 +151,7 @@
 
         <!-- Grid column -->
         <div >
-          <h5 class="font-weight-bold mb-3">  <i style="color: #990011ff; padding-right: 5px;" class="far fa-comments fa-2x"></i> Enquiry</h5>
+          <h5 style="color: #e9412bf1;" class="font-weight-bold mb-3">  <i style="color: #e9412bf1; padding-right: 5px;" class="far fa-comments fa-2x"></i> Enquiry</h5>
           <p class="admsn-para"> Feel Free to contact us any time  </p>
         </div>
         <!-- Grid column -->
@@ -183,9 +183,9 @@
 
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer class="page-footer  font-small ">
 
-  <div style="background-color: #031640 ;">
+  <div style="background-color: #e9412bf1 ;">
     <div class="container">
 
       <!-- Grid row-->
