--- a/Faculty.html
+++ b/Faculty.html
@@ -251,8 +251,9 @@
 
 </section>
 <br>
-<section id="middle">
-  <h1 class="head"> Middle School</h1>
+<h1 class="head"> Middle School</h1>
+<section style="background-color:#d6f8b4; padding-bottom: 10px; padding-top: 10px;"  id="middle">
+
 <div class="horiline"> 
 
 <div class="plate">
